feat: vinculo do front com as rotas do back

--- a/sistema.frontend/Components/Pages/CadastroCliente.razor
+++ b/sistema.frontend/Components/Pages/CadastroCliente.razor
@@ -1,5 +1,6 @@
 ﻿@page "/cadastro-cliente"
 @using BlazorBootstrap
+@using Microsoft.AspNetCore.Components.Forms
 @using sistema.frontend.Models
 @using sistema.frontend.Services
 @inject ClienteApiService ClienteApiService
